k8s/app/base/service.yml
apiVersion: v1
kind: Service
metadata:
  name: webapp-service # from-param: ${SERVICE_NAME}
  namespace: ${NAMESPACE} # from-param: ${NAMESPACE}
  labels:
    app: webapp # from-param: ${APP_NAME}
    stage: ${STAGE} # from-param: ${STAGE}
    boundary: ${BOUNDARY} # from-param: ${BOUNDARY}
    tier: ${TIER} # from-param: ${TIER}
    environment: ${ENV} # from-param: ${ENV}
spec:
  type: ClusterIP
  selector:
    app: webapp # from-param: ${APP_NAME}
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
      name: http
